objects/Question_and_answer__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <fields>
        <fullName>Answer__c</fullName>
        <label>Answer</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <label>Question</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Review_Date__c</fullName>
        <label>Review Date</label>
        <type>Date</type>
    </fields>
    <label>Question and Answer</label>
    <pluralLabel>Questions and Answers</pluralLabel>
</CustomObject>